# pii-redaction-scanner

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  good_first_issue.md
.github/workflows/: ci.yml
docs/: architecture.md  demo.md  recruiter-brief.md  roadmap.md
src/pii_redaction_scanner/: __init__.py  cli.py
tests/: test_core.py
